Fixed some trivial code lacklustre statements.